FIX: display email button NEW BUG: displays button but jumps at different screen sizes

--- a/style.css
+++ b/style.css
@@ -282,23 +282,27 @@ body{
     }
 
     .nav__item form input {
-        width: 100%;
+        width: 80%;
         font-size: 15px;
         color: #ffffff;
         background: transparent;
         border: none;
         padding: 15px 0;
         border-bottom: 2px solid #ffffff;
+        display: inline-block;
     }
     .nav__item form button {
         color: #b7b7b7;
         font-size: 16px;
-        position: absolute;
-        right: 5px;
-        top: 0;
-        height: 100%;
+        height: 70%;
         background: transparent;
         border: none;
+        display: inline-block;
+        position: relative;
+        left: -30px;
+    }
+    [type=submit]:not(:disabled), button:not(:disabled) {
+      cursor: pointer;
     }
 
     .fa {
